--- a/score_null_distribution.qmd
+++ b/score_null_distribution.qmd
@@ -90,8 +90,8 @@ runs <- c(20, 40)
 k <- 2:8
 starting_seed <- 599
 
-grid_result <- expand_grid(p, n, n_resamples, prop_resample, runs, k) |> 
-  rowwise() |> 
+grid_result <- expand_grid(p, n, n_resamples, prop_resample, runs, k) |>
+  rowwise() |>
   mutate(res = list(lapply(c(1:runs), function(i) {
     temp_seed <- starting_seed * i * p * n * k
     set.seed(temp_seed) # very important to set this
@@ -104,11 +104,11 @@ grid_result <- expand_grid(p, n, n_resamples, prop_resample, runs, k) |>
                                            starting_seed = temp_seed)
     m_matrix <- mean_matrix(resample_matrices)
     return(squared_distance_from_one(m_matrix))
-    
+
   })))
 
-end_result <- grid_result |> 
-  unnest(res) |> 
+end_result <- grid_result |>
+  unnest(res) |>
   unnest(res)
 toc()
 
@@ -117,16 +117,16 @@ write.csv(end_result,
 ```
 
 ```{r}
-end_result |> 
-  mutate(k = factor(k)) |> 
+end_result |>
+  mutate(k = factor(k)) |>
   ggplot(aes(x = k, y = res, fill = factor(n_resamples))) +
   geom_boxplot() +
   facet_wrap(~runs) +
   theme_minimal()
 
 
-end_result |> 
-  mutate(k = factor(k)) |> 
+end_result |>
+  mutate(k = factor(k)) |>
   ggplot(aes(x = res, y = k, fill = factor(n_resamples))) +
   geom_density_ridges() +
   facet_wrap(~runs)
@@ -134,3 +134,42 @@ end_result |>
 # try n_resamples 5, 10, 20?
 ```
 
+```{r}
+tic()
+p <- c(2)
+n <- c(100)
+n_resamples <- c(70)
+prop_resample <- 0.9
+runs <- c(100)
+k <- 2:8
+starting_seed <- 599
+
+grid_result <- expand_grid(p, n, n_resamples, prop_resample, runs, k) |>
+  rowwise() |>
+  mutate(res = list(lapply(c(1:runs), function(i) {
+    temp_seed <- starting_seed * i * p * n * k
+    set.seed(temp_seed) # very important to set this
+    data <- data.frame(replicate(p, rnorm(n)))
+    resample_matrices <- resample_function(data = data,
+                                           formula = ~ .,
+                                           k = k,
+                                           number_of_resamples = n_resamples,
+                                           proportion_resample = prop_resample,
+                                           starting_seed = temp_seed)
+    m_matrix <- mean_matrix(resample_matrices)
+    return(squared_distance_from_one(m_matrix))
+
+  })))
+
+end_result <- grid_result |>
+  unnest(res) |>
+  unnest(res)
+toc()
+
+end_result |>
+  mutate(k = factor(k)) |>
+  ggplot(aes(x = k, y = res, fill = factor(n_resamples))) +
+  geom_boxplot() +
+  facet_wrap(~runs) +
+  theme_minimal()
+```
