--- a/score_null_distribution.qmd
+++ b/score_null_distribution.qmd
@@ -178,3 +178,53 @@ end_result |>
 
 ```
 
+```{r}
+tic()
+p <- c(2, 3, 4, 5)
+n <- c(100)
+n_resamples <- c(70)
+prop_resample <- 0.9
+runs <- c(100)
+k <- 2:20
+starting_seed <- 599
+
+grid_result <- expand_grid(p, n, n_resamples, prop_resample, runs, k) |>
+  rowwise() |>
+  mutate(res = list(lapply(c(1:runs), function(i) {
+    temp_seed <- starting_seed * i * p * n * k
+    set.seed(temp_seed) # very important to set this
+    data <- data.frame(replicate(p, runif(n)))
+    resample_matrices <- resample_function(data = data,
+                                           formula = ~ .,
+                                           k = k,
+                                           number_of_resamples = n_resamples,
+                                           proportion_resample = prop_resample,
+                                           starting_seed = temp_seed)
+    m_matrix <- mean_matrix(resample_matrices)
+    return(squared_distance_from_one(m_matrix))
+
+  })))
+
+end_result <- grid_result |>
+  unnest(res) |>
+  unnest(res)
+toc()
+
+write.csv(end_result,
+          file = here::here("data/simulation_unif_combination_run_1.csv"))
+
+end_result <- read.csv(file = here::here("data/simulation_unif_combination_run_1.csv"))
+
+end_result |>
+  mutate(k = factor(k),
+         p = factor(p)) |>
+  rename(Score = res,
+         Clusters = k) |> 
+  ggplot(aes(x = Clusters, y = Score, fill = p)) +
+  geom_boxplot() +
+  ggtitle(
+    "Scores on a Random p-Dimensional Uniform Distribution") +
+  labs(subtitle = "100 Runs per Cluster per Dimension with a resample proportion of 0.9, 70 resamples, and n=100 per sample (starting seed = 599)") +
+  theme_minimal()
+```
+
