--- a/score_null_distribution.qmd
+++ b/score_null_distribution.qmd
@@ -388,6 +388,20 @@ end_result |>
   labs(subtitle = "100 Runs per Cluster per Dimension with a resample proportion of 0.9, 70 resamples, and n=100 per sample (starting seed = 599)") +
   theme_minimal() +
   facet_wrap(~factor(prop_resample))
+
+
+end_result |>
+  mutate(k = factor(k),
+         n_resamples = factor(n_resamples)) |>
+  rename(Score = res,
+         Clusters = k) |> 
+  ggplot(aes(x = Clusters, y = log(Score), fill = n_resamples)) +
+  geom_boxplot() +
+  ggtitle(
+    "Scores on a Random p-Dimensional Uniform Distribution") +
+  labs(subtitle = "100 Runs per Cluster per Dimension with a resample proportion of 0.9, 70 resamples, and n=100 per sample (starting seed = 599)") +
+  theme_minimal() +
+  facet_wrap(~factor(prop_resample))
 ```
 
 
@@ -403,11 +417,50 @@ end_result |>
   filter(n_resamples == 100,
          prop_resample == 0.2) |> 
   group_by(factor(k)) |> 
-  summarize(var = var(log(res)))
+  summarize(var = var(sd(res)))
 ```
+## todo: test
 
 ```{r}
+tic()
+p <- c(2)
+n <- c(200)
+n_resamples <- c(200)
+prop_resample <- c(0.1)
+runs <- c(200)
+k <- 2:15
+starting_seed <- 599
 
+grid_result <- expand_grid(p, n, n_resamples, prop_resample, runs, k) |>
+  rowwise() |>
+  mutate(res = list(lapply(c(1:runs), function(i) {
+    temp_seed <- starting_seed * i * p * n
+    set.seed(temp_seed) # very important to set this
+    data <- data.frame(replicate(p, rnorm(n)))
+    resample_matrices <- resample_function(data = data,
+                                           formula = ~ .,
+                                           k = k,
+                                           number_of_resamples = n_resamples,
+                                           proportion_resample = prop_resample,
+                                           starting_seed = temp_seed)
+    m_matrix <- mean_matrix(resample_matrices)
+    return(squared_distance_from_one(m_matrix))
+
+  })))
+
+end_result <- grid_result |>
+  unnest(res) |>
+  unnest(res)
+toc()
+
+end_result |> 
+  mutate(res = res) |> 
+  ggplot(aes(x = factor(k), y = res)) +
+  geom_boxplot()
+
+end_result |> 
+  group_by(factor(k)) |> 
+  summarize(var = sd(res))
 ```
 
 
